--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "echarts": "^5.6.0",
     "eslint": "^9.32.0",
     "lucide-vue-next": "^0.536.0",
     "nuxt": "^3.17.7",
@@ -32,6 +33,7 @@
     "tw-animate-css": "^1.3.6",
     "vue": "^3.5.18",
     "vue-draggable-plus": "^0.6.0",
+    "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
