--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "echarts": "^5.6.0",
     "eslint": "^9.32.0",
+    "lodash.clonedeep": "^4.5.0",
     "lucide-vue-next": "^0.536.0",
     "nuxt": "^3.17.7",
     "reka-ui": "^2.4.1",
@@ -37,6 +38,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/lodash.clonedeep": "^4.5.9",
     "typescript": "^5.8.3"
   }
 }
